--- a/Random__forest.ipynb
+++ b/Random__forest.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "f_detail = pd.read_csv('AdvWorksCusts.csv')\n",
-    "f_status = pd.read_csv('AW_BikeBuyer.csv')\n",
+    "f_status = pd.read_csv('bike-buyers.csv')\n",
     "data = pd.concat([f_detail, f_status['BikeBuyer']], axis=1)"
    ]
   },
